// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZipChecker should render correctly when backordered 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "padding": 8,
    }
  }
>
  <Text
    style={
      Object {
        "marginRight": 8,
        "paddingVertical": 16,
      }
    }
  >
    Zip Code:
  </Text>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D0D3D4",
          "borderWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "height": 48,
          "paddingHorizontal": 8,
        }
      }
    >
      <TextInput
        autoCorrect={false}
        keyboardType="numeric"
        maxLength={10}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={undefined}
        onSubmitEditing={[Function]}
        placeholder="Enter ZIP Code"
        returnKeyType="done"
        style={
          Object {
            "alignSelf": "center",
            "color": "#63666A",
            "flex": 1,
            "fontFamily": "ProximaNova-Regular",
            "fontSize": 16,
            "height": 48,
          }
        }
        value=""
      />
    </View>
    <View
      style={
        Array [
          Object {
            "height": 8,
            "width": 16,
          },
          Object {
            "left": 30,
            "position": "absolute",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#FFFFFF",
              "borderBottomWidth": 8,
              "borderLeftColor": "transparent",
              "borderLeftWidth": 8,
              "borderRightColor": "transparent",
              "borderRightWidth": 8,
              "borderStyle": "solid",
              "height": 0,
              "width": 0,
            },
            Object {
              "borderBottomColor": "#D0D3D4",
              "position": "absolute",
              "top": -1,
            },
          ]
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "borderBottomColor": "#FFFFFF",
            "borderBottomWidth": 8,
            "borderLeftColor": "transparent",
            "borderLeftWidth": 8,
            "borderRightColor": "transparent",
            "borderRightWidth": 8,
            "borderStyle": "solid",
            "height": 0,
            "width": 0,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D0D3D4",
          "borderTopWidth": 0,
          "borderWidth": 1,
          "padding": 8,
        }
      }
    >
      <Text
        color="accent"
        textAlign="center"
        weight="bold"
      >
        Backordered
      </Text>
    </View>
  </View>
</View>
`;

exports[`ZipChecker should render correctly when in stock 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "padding": 8,
    }
  }
>
  <Text
    style={
      Object {
        "marginRight": 8,
        "paddingVertical": 16,
      }
    }
  >
    Zip Code:
  </Text>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D0D3D4",
          "borderWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "height": 48,
          "paddingHorizontal": 8,
        }
      }
    >
      <TextInput
        autoCorrect={false}
        keyboardType="numeric"
        maxLength={10}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={undefined}
        onSubmitEditing={[Function]}
        placeholder="Enter ZIP Code"
        returnKeyType="done"
        style={
          Object {
            "alignSelf": "center",
            "color": "#63666A",
            "flex": 1,
            "fontFamily": "ProximaNova-Regular",
            "fontSize": 16,
            "height": 48,
          }
        }
        value=""
      />
    </View>
    <View
      style={
        Array [
          Object {
            "height": 8,
            "width": 16,
          },
          Object {
            "left": 30,
            "position": "absolute",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#FFFFFF",
              "borderBottomWidth": 8,
              "borderLeftColor": "transparent",
              "borderLeftWidth": 8,
              "borderRightColor": "transparent",
              "borderRightWidth": 8,
              "borderStyle": "solid",
              "height": 0,
              "width": 0,
            },
            Object {
              "borderBottomColor": "#D0D3D4",
              "position": "absolute",
              "top": -1,
            },
          ]
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "borderBottomColor": "#FFFFFF",
            "borderBottomWidth": 8,
            "borderLeftColor": "transparent",
            "borderLeftWidth": 8,
            "borderRightColor": "transparent",
            "borderRightWidth": 8,
            "borderStyle": "solid",
            "height": 0,
            "width": 0,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D0D3D4",
          "borderTopWidth": 0,
          "borderWidth": 1,
          "padding": 8,
        }
      }
    >
      <Text
        textAlign="center"
      >
        Available:
         
        <Text
          color="accent"
          weight="bold"
        >
           in Stock
        </Text>
      </Text>
    </View>
  </View>
</View>
`;

exports[`ZipChecker should render correctly when insufficient quantity 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "padding": 8,
    }
  }
>
  <Text
    style={
      Object {
        "marginRight": 8,
        "paddingVertical": 16,
      }
    }
  >
    Zip Code:
  </Text>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D0D3D4",
          "borderWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "height": 48,
          "paddingHorizontal": 8,
        }
      }
    >
      <TextInput
        autoCorrect={false}
        keyboardType="numeric"
        maxLength={10}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={undefined}
        onSubmitEditing={[Function]}
        placeholder="Enter ZIP Code"
        returnKeyType="done"
        style={
          Object {
            "alignSelf": "center",
            "color": "#63666A",
            "flex": 1,
            "fontFamily": "ProximaNova-Regular",
            "fontSize": 16,
            "height": 48,
          }
        }
        value=""
      />
    </View>
    <View
      style={
        Array [
          Object {
            "height": 8,
            "width": 16,
          },
          Object {
            "left": 30,
            "position": "absolute",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#FFFFFF",
              "borderBottomWidth": 8,
              "borderLeftColor": "transparent",
              "borderLeftWidth": 8,
              "borderRightColor": "transparent",
              "borderRightWidth": 8,
              "borderStyle": "solid",
              "height": 0,
              "width": 0,
            },
            Object {
              "borderBottomColor": "#D0D3D4",
              "position": "absolute",
              "top": -1,
            },
          ]
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "borderBottomColor": "#FFFFFF",
            "borderBottomWidth": 8,
            "borderLeftColor": "transparent",
            "borderLeftWidth": 8,
            "borderRightColor": "transparent",
            "borderRightWidth": 8,
            "borderStyle": "solid",
            "height": 0,
            "width": 0,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D0D3D4",
          "borderTopWidth": 0,
          "borderWidth": 1,
          "padding": 8,
        }
      }
    >
      <Text
        color="accent"
        textAlign="center"
      >
        Sorry, but this product is not available in the quantity you selected. Please call
         
        <Text
          color="accent"
          onPress={[Function]}
          weight="bold"
        >
          (855) 484-3292
        </Text>
         
        for assistance.
      </Text>
    </View>
  </View>
</View>
`;

exports[`ZipChecker should render correctly when out of stock 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "padding": 8,
    }
  }
>
  <Text
    style={
      Object {
        "marginRight": 8,
        "paddingVertical": 16,
      }
    }
  >
    Zip Code:
  </Text>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D0D3D4",
          "borderWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "height": 48,
          "paddingHorizontal": 8,
        }
      }
    >
      <TextInput
        autoCorrect={false}
        keyboardType="numeric"
        maxLength={10}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={undefined}
        onSubmitEditing={[Function]}
        placeholder="Enter ZIP Code"
        returnKeyType="done"
        style={
          Object {
            "alignSelf": "center",
            "color": "#63666A",
            "flex": 1,
            "fontFamily": "ProximaNova-Regular",
            "fontSize": 16,
            "height": 48,
          }
        }
        value=""
      />
    </View>
    <View
      style={
        Array [
          Object {
            "height": 8,
            "width": 16,
          },
          Object {
            "left": 30,
            "position": "absolute",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#FFFFFF",
              "borderBottomWidth": 8,
              "borderLeftColor": "transparent",
              "borderLeftWidth": 8,
              "borderRightColor": "transparent",
              "borderRightWidth": 8,
              "borderStyle": "solid",
              "height": 0,
              "width": 0,
            },
            Object {
              "borderBottomColor": "#D0D3D4",
              "position": "absolute",
              "top": -1,
            },
          ]
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "borderBottomColor": "#FFFFFF",
            "borderBottomWidth": 8,
            "borderLeftColor": "transparent",
            "borderLeftWidth": 8,
            "borderRightColor": "transparent",
            "borderRightWidth": 8,
            "borderStyle": "solid",
            "height": 0,
            "width": 0,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D0D3D4",
          "borderTopWidth": 0,
          "borderWidth": 1,
          "padding": 8,
        }
      }
    >
      <Text
        color="accent"
        textAlign="center"
        weight="bold"
      >
        Out of Stock
      </Text>
    </View>
  </View>
</View>
`;

exports[`ZipChecker should render correctly with default props 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "padding": 8,
    }
  }
>
  <Text
    style={
      Object {
        "marginRight": 8,
        "paddingVertical": 16,
      }
    }
  >
    Zip Code:
  </Text>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D0D3D4",
          "borderWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "height": 48,
          "paddingHorizontal": 8,
        }
      }
    >
      <TextInput
        autoCorrect={false}
        keyboardType="numeric"
        maxLength={10}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={undefined}
        onSubmitEditing={[Function]}
        placeholder="Enter ZIP Code"
        returnKeyType="done"
        style={
          Object {
            "alignSelf": "center",
            "color": "#63666A",
            "flex": 1,
            "fontFamily": "ProximaNova-Regular",
            "fontSize": 16,
            "height": 48,
          }
        }
        value=""
      />
    </View>
    <View
      style={
        Array [
          Object {
            "height": 8,
            "width": 16,
          },
          Object {
            "left": 30,
            "position": "absolute",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#FFFFFF",
              "borderBottomWidth": 8,
              "borderLeftColor": "transparent",
              "borderLeftWidth": 8,
              "borderRightColor": "transparent",
              "borderRightWidth": 8,
              "borderStyle": "solid",
              "height": 0,
              "width": 0,
            },
            Object {
              "borderBottomColor": "#D0D3D4",
              "position": "absolute",
              "top": -1,
            },
          ]
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "borderBottomColor": "#FFFFFF",
            "borderBottomWidth": 8,
            "borderLeftColor": "transparent",
            "borderLeftWidth": 8,
            "borderRightColor": "transparent",
            "borderRightWidth": 8,
            "borderStyle": "solid",
            "height": 0,
            "width": 0,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D0D3D4",
          "borderTopWidth": 0,
          "borderWidth": 1,
          "padding": 8,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        lineHeight={false}
        style={
          Object {
            "color": "#63666A",
            "fontSize": 16,
          }
        }
        textAlign="center"
      >
        Please enter ZIP code for availability
      </Text>
    </View>
  </View>
</View>
`;
